--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -159,6 +159,25 @@
                     </div><!-- /panel-->
                 </div><!-- /col-lg-12-->
             </div><!-- /row-->
+
+            <!-- Modal -->
+            <div id="matchModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal Content -->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4>The gods have chosen your perfect match to be:</h4>
+                            <h3 class="modal-title"></h3>
+                        </div>
+                        <div class="modal-body"></div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Gross! No, way!</button>
+                        </div>
+                    </div> <!-- End of Modal Content -->
+                </div>
+            </div> <!-- End of Modal -->
+
             <footer class="footer">
                 <div class="container">
                     <p><a href="/api/friends">API Friends Link</a></p>
@@ -183,28 +202,105 @@
                     return isValid;
                 }
 
-                var newFriend = {
-                    name: $("#name").val().trim(),
-                    photo: $("#photo").val().trim(),
-                    scores: [
-                    $("#q01").val().trim(),
-                    $("#q02").val().trim(),
-                    $("#q03").val().trim(),
-                    $("#q04").val().trim(),
-                    $("#q05").val().trim(),
-                    $("#q06").val().trim(),
-                    $("#q07").val().trim(),
-                    $("#q08").val().trim(),
-                    $("#q09").val().trim(),
-                    $("#q10").val().trim()
-                    ]
-                };
+                if (validateSurvey()) {
 
-                $.post("/api/friends", newFriend)
-                    .then(function(data) {
-                    // show the name and photo of best match
-                });
+                    var newFriend = {
+                        name: $("#name").val().trim(),
+                        photo: $("#photo").val().trim(),
+                        scores: [
+                            $("#q01").val().trim(),
+                            $("#q02").val().trim(),
+                            $("#q03").val().trim(),
+                            $("#q04").val().trim(),
+                            $("#q05").val().trim(),
+                            $("#q06").val().trim(),
+                            $("#q07").val().trim(),
+                            $("#q08").val().trim(),
+                            $("#q09").val().trim(),
+                            $("#q10").val().trim()
+                        ]
+                    };
+                    // Get the location of the root page.
+                    var currentURL = window.location.origin;
+
+                    $.post(currentURL + "/api/friends", newFriend)
+                        .then(function(data) {
+                        // show the name and photo of best match
+                    });
+
+                    // The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
+                    $.ajax({url: currentURL + "/api/friends", method: "GET"}).done(function(res) {
+                        // // Here we are logging the URL so we have access to it for troubleshooting
+                        // console.log("------------------------------------");
+                        // console.log("URL: " + currentURL + "/api/friends");
+                        // console.log("------------------------------------");
+                        // // Here we then log the data to console, where it will show up as an object.
+                        // console.log(res);
+                        // console.log("------------------------------------")
+
+                        var bestMatch;
+                        var surveyDifference = [];
+                        var varianceArray = [];
+
+                        // Loop through each of the surveys other than the current one from the user
+                        for (var i = 0; i < res.length - 1; i++) {
+                            // Loop through the scores from each survey from parent loop
+                            for (var j = 0; j < 10; j++) {
+                                var questionDifference = newFriend.scores[j] - res[i].scores[j];
+                                surveyDifference.push(Math.abs(questionDifference));
+                            }
+
+                            // Get the sum of question differences for each survey to survey comparison
+                            var totalDifference = surveyDifference.reduce(getSum);
+                            console.log("surveyDifference: " + surveyDifference);
+                            console.log("totalDifference: " + totalDifference);
+
+                            // Store the sum of question differences as a variable
+                            surveyDifference = [];
+                            // Store all the sums in a new array to be used for the best match search
+                            varianceArray.push(totalDifference);
+                            console.log(varianceArray);
+
+                            // Find the minimum sum of differences
+                            function indexOfMinimum(varianceArray) {
+                                if (varianceArray === 0) {
+                                    return -1;
+                                }
+                                var min = varianceArray[0];
+                                var minIndex = 0;
+
+                                for (var i = 1; i < varianceArray.length; i++) {
+                                    if (varianceArray[i] < min) {
+                                        minIndex = i;
+                                        min = varianceArray[i];
+                                    }
+                                }
+
+                                // The index of the minimum sum of differences will be matched to the name of the user.
+                                console.log("minIndex: " + minIndex);
+                                console.log(res[parseInt(minIndex)].name);
+                                bestMatchName = res[parseInt(minIndex)].name;
+                                console.log("bestMatchName: " + bestMatchName);
+                                bestMatchPhoto = res[parseInt(minIndex)].photo;
+                            }
+                        }
+                        // Call the function after comparing all surveys, when varianceArray has been filled.
+                        indexOfMinimum(varianceArray);
+
+                        // Send results to modal to show to user.
+                        var bestMatchPic = '<img width="300px" src=' + bestMatchPhoto + '>';
+                        $(".modal-title").html(bestMatchName);
+                        $(".modal-body").html(bestMatchPic);
+                        $("#matchModal").modal("show");
+                    });
+
+                } else {
+                    alert("Not so fast, Romeo");
+                };
+            function getSum(total, num) {
+                return total + num;
+            };
             });
-    </script>
+        </script>
     </body>
 </html>
