--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,17 +9,19 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     </head>
-    <body>
+    <body style="background-image: url('./images/sakura.png')">
         <div class="container">
-            <div class="jumbotron">
-                <h1>Survey Questions</h1>
+            <div class="jumbotron"  style="background-color: #eb7391; font-family: 'Courgette', cursive; color: #fff; border: 5px solid #fff;">
+                <h1>Share yourself!</h1>
             </div><!-- /jumbotron-->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
 
-                        <div class="panel-heading">
+                        <div class="panel-heading" style="background-color: #eb7391; color: #fff; border: 3px solid #fff;">
                             <h3 class="panel-title"><strong>About You</strong></h3>
                         </div><!-- /panel-heading-->
 
@@ -34,6 +36,11 @@
                                 <div class="form-group">
                                     <label for="photo">Link to Photo (Required)</label>
                                     <input type="text" class="form-control" id="photo">
+                                </div>
+
+                                <div class="form-group">
+                                        <label for="quote">A sentence about yourself (Required)</label>
+                                        <input type="text" class="form-control" id="quote">
                                 </div>
                                 <hr>
 
@@ -151,8 +158,8 @@
                             <br>
                             <!-- Submit Survey Button-->
                             <div class="text-right">
-                                <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit-btn">
-                                    <span class="glyphicon glyphicon-ok"></span> Submit Survey
+                                <button type="submit" class="btn btn-danger btn-lg btn-block" id="submit-btn">
+                                    <span class="glyphicon glyphicon-ok"></span> Match me up!
                                 </button>
                             </div>
                         </div><!-- /panel-body-->
@@ -165,14 +172,14 @@
                 <div class="modal-dialog">
                     <!-- Modal Content -->
                     <div class="modal-content">
-                        <div class="modal-header">
+                        <div class="modal-header" style="background-color: #eb7391; color: #fff;">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4>The gods have chosen your perfect match to be:</h4>
-                            <h3 class="modal-title"></h3>
+                            <h4><i>The gods have chosen your perfect match to be:</i></h4>
+                            <h2 class="modal-title" style="font-family: 'Courgette', cursive;"></h2>
                         </div>
                         <div class="modal-body"></div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Gross! No, way!</button>
+                        <div class="modal-footer" style="background-color: #eb7391; color: #fff;">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal">Gross! No, way!</button>
                         </div>
                     </div> <!-- End of Modal Content -->
                 </div>
@@ -207,6 +214,7 @@
                     var newFriend = {
                         name: $("#name").val().trim(),
                         photo: $("#photo").val().trim(),
+                        quote: $("#quote").val().trim(),
                         scores: [
                             $("#q01").val().trim(),
                             $("#q02").val().trim(),
@@ -225,7 +233,9 @@
 
                     $.post(currentURL + "/api/friends", newFriend)
                         .then(function(data) {
-                        // show the name and photo of best match
+                            // Clear the form when submitting
+                            $(".form-control").val("");
+                            $(".chosen-select").val("");
                     });
 
                     // The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
@@ -282,6 +292,7 @@
                                 bestMatchName = res[parseInt(minIndex)].name;
                                 console.log("bestMatchName: " + bestMatchName);
                                 bestMatchPhoto = res[parseInt(minIndex)].photo;
+                                bestMatchQuote = res[parseInt(minIndex)].quote;
                             }
                         }
                         // Call the function after comparing all surveys, when varianceArray has been filled.
@@ -290,12 +301,12 @@
                         // Send results to modal to show to user.
                         var bestMatchPic = '<img width="300px" src=' + bestMatchPhoto + '>';
                         $(".modal-title").html(bestMatchName);
-                        $(".modal-body").html(bestMatchPic);
+                        $(".modal-body").html(bestMatchPic + "<br>" + "<h3><i>" + '"' + bestMatchQuote + '"' + "</i></h3>");
                         $("#matchModal").modal("show");
                     });
 
                 } else {
-                    alert("Not so fast, Romeo");
+                    alert("Not so fast, Romeo. Fill in the whole survey.");
                 };
             function getSum(total, num) {
                 return total + num;
