Minor css changes, background won't load.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,14 +9,16 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     </head>
-    <body>
+    <body style="background-image: url('images/sakura.png')">
         <div class="container">
 
-            <div class="jumbotron">
-                <h1>Friend Finder</h1>
+            <div class="jumbotron"  style="background-color: #eb7391; color: #fff; border: 5px solid #fff;">
+                <h1 style="font-family: 'Courgette', cursive;">"Friend" Finder</h1>
                 <h3>Answer a few basic questions.</h3>
-                <h3>Then find the friend with the greatest compatibility!</h3>
+                <h3>Then prepare to be matched with to the person you're most compatible with!</h3>
                 <hr>
                 <a href="/survey">
                     <button class="btn btn-danger btn-lg">
