--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -12,7 +12,7 @@
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     </head>
-    <body style="background-image: url('./images/sakura.png')">
+    <body style="background-image: url('images/sakura.png')">
         <div class="container">
             <div class="jumbotron"  style="background-color: #eb7391; font-family: 'Courgette', cursive; color: #fff; border: 5px solid #fff;">
                 <h1>Share yourself!</h1>
@@ -25,7 +25,7 @@
                             <h3 class="panel-title"><strong>About You</strong></h3>
                         </div><!-- /panel-heading-->
 
-                        <div class="panel-body">
+                        <div class="panel-body" style="background-image: url('images/xv.png')">
                             <form method="POST" role="form">
 
                                 <div class="form-group">
