Moved match logic to api-routes

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,7 +12,7 @@
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     </head>
-    <body style="background-image: url('images/sakura.png')">
+    <body style="background-image: href('/images/sakura.png')">
         <div class="container">
 
             <div class="jumbotron"  style="background-color: #eb7391; color: #fff; border: 5px solid #fff;">
